--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ h1 {
 }
 
 #new-btn {
+  font-size: 1.5rem;
   display: block;
   margin: 20px auto;
   border-radius: 15px;
@@ -62,16 +63,19 @@ h1 {
   color: white;
   border: none;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 #new-btn:hover {
-  background-color: #2980b9;
+  background-color: #168edf;
+  transform: scale(1.1);
 }
 
 #status-display {
   text-align: center;
   margin-top: 20px;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
   color: #2c3e50;
 }
 
